lib/src/ffi/generated_native_asset_bindings.dart

// Regenerate with: dart run ffigen --config ffigen.native_assets.yaml

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:fllamer/llama_dart_bridge')
library;

import 'dart:ffi' as ffi;
import '' as self;

@ffi.Native<ffi.Uint32 Function()>()
external int llama_dart_abi_version();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> llama_dart_upstream_commit();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> llama_dart_build_flags();

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int32)>()
external ffi.Pointer<ffi.Char> llama_dart_model_file_type_name(int ftype);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> llama_dart_multimodal_marker();

@ffi.Native<ffi.UnsignedInt Function(ffi.Uint32)>()
external int llama_dart_log_set_level(int minimum_level);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<llama_dart_buffer>,
  )
>()
external int llama_dart_log_next(
  ffi.Pointer<ffi.Uint32> out_level,
  ffi.Pointer<llama_dart_buffer> out_message,
);

@ffi.Native<ffi.UnsignedInt Function()>()
external int llama_dart_backend_init();

@ffi.Native<ffi.UnsignedInt Function()>()
external int llama_dart_backend_free();

@ffi.Native<ffi.UnsignedInt Function(ffi.Pointer<llama_dart_capabilities>)>()
external int llama_dart_get_capabilities(
  ffi.Pointer<llama_dart_capabilities> out_capabilities,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_model_load_config>,
    ffi.Pointer<ffi.Pointer<llama_dart_model>>,
  )
>()
external int llama_dart_model_load(
  ffi.Pointer<llama_dart_model_load_config> config,
  ffi.Pointer<ffi.Pointer<llama_dart_model>> out_model,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<llama_dart_model>)>()
external void llama_dart_model_free(ffi.Pointer<llama_dart_model> model);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_model>,
    ffi.Pointer<llama_dart_model_info>,
  )
>()
external int llama_dart_model_get_info(
  ffi.Pointer<llama_dart_model> model,
  ffi.Pointer<llama_dart_model_info> out_info,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_model>,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int llama_dart_model_get_description(
  ffi.Pointer<llama_dart_model> model,
  ffi.Pointer<ffi.Char> buffer,
  int buffer_size,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.UnsignedInt Function(ffi.Pointer<llama_dart_model>, ffi.Pointer<ffi.Size>)
>()
external int llama_dart_model_metadata_count(
  ffi.Pointer<llama_dart_model> model,
  ffi.Pointer<ffi.Size> out_count,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_model>,
    ffi.Size,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int llama_dart_model_metadata_get(
  ffi.Pointer<llama_dart_model> model,
  int index,
  ffi.Pointer<ffi.Char> key_buffer,
  int key_buffer_size,
  ffi.Pointer<ffi.Size> out_key_size,
  ffi.Pointer<ffi.Char> value_buffer,
  int value_buffer_size,
  ffi.Pointer<ffi.Size> out_value_size,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_model>,
    ffi.Pointer<llama_dart_buffer>,
  )
>()
external int llama_dart_model_get_chat_template(
  ffi.Pointer<llama_dart_model> model,
  ffi.Pointer<llama_dart_buffer> out_template,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_model>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Int32>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
    ffi.Uint8,
    ffi.Uint8,
  )
>()
external int llama_dart_model_tokenize(
  ffi.Pointer<llama_dart_model> model,
  ffi.Pointer<ffi.Uint8> text_data,
  int text_size,
  ffi.Pointer<ffi.Int32> tokens,
  int tokens_capacity,
  ffi.Pointer<ffi.Size> out_token_count,
  int add_special,
  int parse_special,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_model>,
    ffi.Pointer<ffi.Int32>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
    ffi.Uint8,
    ffi.Uint8,
  )
>()
external int llama_dart_model_detokenize(
  ffi.Pointer<llama_dart_model> model,
  ffi.Pointer<ffi.Int32> tokens,
  int token_count,
  ffi.Pointer<ffi.Uint8> text_data,
  int text_capacity,
  ffi.Pointer<ffi.Size> out_text_size,
  int remove_special,
  int unparse_special,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_model>,
    ffi.Pointer<llama_dart_chat_message>,
    ffi.Size,
    ffi.Uint8,
    ffi.Pointer<llama_dart_buffer>,
  )
>()
external int llama_dart_model_apply_chat_template(
  ffi.Pointer<llama_dart_model> model,
  ffi.Pointer<llama_dart_chat_message> messages,
  int message_count,
  int add_assistant_prompt,
  ffi.Pointer<llama_dart_buffer> out_prompt,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_model>,
    ffi.Pointer<llama_dart_chat_template_capabilities>,
  )
>()
external int llama_dart_model_get_chat_template_capabilities(
  ffi.Pointer<llama_dart_model> model,
  ffi.Pointer<llama_dart_chat_template_capabilities> out_capabilities,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_model>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<llama_dart_buffer>,
  )
>()
external int llama_dart_model_create_chat_plan(
  ffi.Pointer<llama_dart_model> model,
  ffi.Pointer<ffi.Uint8> request_data,
  int request_size,
  ffi.Pointer<llama_dart_buffer> out_plan,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<llama_dart_buffer>,
  )
>()
external int llama_dart_chat_parse_output(
  ffi.Pointer<ffi.Uint8> plan_data,
  int plan_size,
  ffi.Pointer<ffi.Uint8> output_data,
  int output_size,
  ffi.Pointer<llama_dart_buffer> out_message_json,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<llama_dart_buffer>,
  )
>()
external int llama_dart_json_schema_to_grammar(
  ffi.Pointer<ffi.Uint8> schema_data,
  int schema_size,
  ffi.Pointer<llama_dart_buffer> out_grammar,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_model>,
    ffi.Pointer<llama_dart_context_config>,
    ffi.Pointer<ffi.Pointer<llama_dart_context>>,
  )
>()
external int llama_dart_context_create(
  ffi.Pointer<llama_dart_model> model,
  ffi.Pointer<llama_dart_context_config> config,
  ffi.Pointer<ffi.Pointer<llama_dart_context>> out_context,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<llama_dart_context>)>()
external void llama_dart_context_free(ffi.Pointer<llama_dart_context> context);

@ffi.Native<ffi.UnsignedInt Function(ffi.Pointer<llama_dart_context>)>()
external int llama_dart_context_reset(ffi.Pointer<llama_dart_context> context);

@ffi.Native<ffi.UnsignedInt Function(ffi.Pointer<llama_dart_context>)>()
external int llama_dart_context_warm_up(
  ffi.Pointer<llama_dart_context> context,
);

@ffi.Native<ffi.UnsignedInt Function(ffi.Pointer<llama_dart_context>)>()
external int llama_dart_context_cancel(ffi.Pointer<llama_dart_context> context);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_context>,
    ffi.Pointer<llama_dart_context_info>,
  )
>()
external int llama_dart_context_get_info(
  ffi.Pointer<llama_dart_context> context,
  ffi.Pointer<llama_dart_context_info> out_info,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_context>,
    ffi.Pointer<llama_dart_buffer>,
  )
>()
external int llama_dart_context_state_get(
  ffi.Pointer<llama_dart_context> context,
  ffi.Pointer<llama_dart_buffer> out_state,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_context>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
  )
>()
external int llama_dart_context_state_set(
  ffi.Pointer<llama_dart_context> context,
  ffi.Pointer<ffi.Uint8> state_data,
  int state_size,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_context>,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint32>,
  )
>()
external int llama_dart_context_shift(
  ffi.Pointer<llama_dart_context> context,
  int keep_tokens,
  int discard_tokens,
  ffi.Pointer<ffi.Uint32> out_discarded_tokens,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_context>,
    ffi.Pointer<llama_dart_completion_config>,
    ffi.Pointer<llama_dart_buffer>,
    ffi.Pointer<llama_dart_completion_stats>,
  )
>()
external int llama_dart_context_complete(
  ffi.Pointer<llama_dart_context> context,
  ffi.Pointer<llama_dart_completion_config> config,
  ffi.Pointer<llama_dart_buffer> out_text,
  ffi.Pointer<llama_dart_completion_stats> out_stats,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_context>,
    ffi.Pointer<llama_dart_completion_config>,
    ffi.Pointer<ffi.Pointer<llama_dart_generation>>,
  )
>()
external int llama_dart_generation_start(
  ffi.Pointer<llama_dart_context> context,
  ffi.Pointer<llama_dart_completion_config> config,
  ffi.Pointer<ffi.Pointer<llama_dart_generation>> out_generation,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_generation>,
    ffi.Pointer<llama_dart_buffer>,
    ffi.Pointer<llama_dart_completion_stats>,
    ffi.Pointer<ffi.Uint8>,
  )
>()
external int llama_dart_generation_next(
  ffi.Pointer<llama_dart_generation> generation,
  ffi.Pointer<llama_dart_buffer> out_text,
  ffi.Pointer<llama_dart_completion_stats> out_stats,
  ffi.Pointer<ffi.Uint8> out_done,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<llama_dart_generation>)>()
external void llama_dart_generation_free(
  ffi.Pointer<llama_dart_generation> generation,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_context>,
    ffi.Pointer<llama_dart_embedding_config>,
    ffi.Pointer<llama_dart_float_buffer>,
  )
>()
external int llama_dart_context_embed(
  ffi.Pointer<llama_dart_context> context,
  ffi.Pointer<llama_dart_embedding_config> config,
  ffi.Pointer<llama_dart_float_buffer> out_embedding,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_context>,
    ffi.Pointer<llama_dart_rerank_config>,
    ffi.Pointer<ffi.Float>,
  )
>()
external int llama_dart_context_rerank(
  ffi.Pointer<llama_dart_context> context,
  ffi.Pointer<llama_dart_rerank_config> config,
  ffi.Pointer<ffi.Float> out_score,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_model>,
    ffi.Pointer<llama_dart_lora_load_config>,
    ffi.Pointer<ffi.Pointer<llama_dart_lora_adapter>>,
  )
>()
external int llama_dart_lora_load(
  ffi.Pointer<llama_dart_model> model,
  ffi.Pointer<llama_dart_lora_load_config> config,
  ffi.Pointer<ffi.Pointer<llama_dart_lora_adapter>> out_adapter,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<llama_dart_lora_adapter>)>()
external void llama_dart_lora_free(
  ffi.Pointer<llama_dart_lora_adapter> adapter,
);

@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<llama_dart_context>,
    ffi.Pointer<ffi.Pointer<llama_dart_lora_adapter>>,
    ffi.Pointer<ffi.Float>,
    ffi.Size,
  )
>()
external int llama_dart_context_set_lora_adapters(
  ffi.Pointer<llama_dart_context> context,
  ffi.Pointer<ffi.Pointer<llama_dart_lora_adapter>> adapters,
  ffi.Pointer<ffi.Float> scales,
  int adapter_count,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>()
external void llama_dart_buffer_free(ffi.Pointer<ffi.Uint8> data);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Float>)>()
external void llama_dart_float_buffer_free(ffi.Pointer<ffi.Float> data);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> llama_dart_last_error_message();

@ffi.Native<ffi.Void Function()>()
external void llama_dart_clear_last_error();

const addresses = _SymbolAddresses();
